# django-pint-field

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bandit.yml  docker-compose.yaml  docker-compose.yml  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
compose/django/: Dockerfile  entrypoint  start
compose/postgres/: Dockerfile
django_pint_field/: __init__.py  aggregates.py  apps.py  exceptions.py  fields.py  forms.py  helper.py  lookups.py  models.py  rest.py  settings.py  units.py  widgets.py
django_pint_field/migrations/: 0001_create_composite_fields.py
django_pint_field/templates/: tabled_django_pint_field_widget.html
docs/: advanced_usage.md  cheatsheet.md  concepts.md  conf.py  configuration.md  cookbook.md  example-project.md  example_project.md  howto-admin.md  howto-api.md  howto-fields.md  howto-forms-templates.md  howto-production.md  howto-queries.md  index.md  quickstart.md  reference.md  requirements.txt  terminology.md  tutorial.md  usage.md
example_project/: __init__.py  asgi.py  conftest.py  settings.py  test_admin.py  test_aggregates.py  test_analytics_aggregates.py  test_apps.py  test_bulk_update.py  test_caching.py  test_checks.py  test_constraints.py  test_descriptor.py  test_django_pint_field.py  test_expressions.py  test_filters.py  test_forms.py  test_helper.py  test_helpers.py  test_indexes.py  test_integration.py  test_lookups.py  test_models.py  test_proxy_caching.py  test_rest.py  test_templatetags.py  test_validation.py  test_widget.py  test_window_aggregates.py  urls.py  wsgi.py
example_project/example/: __init__.py  admin.py  apps.py  forms.py  helper.py  models.py  urls.py  views.py
example_project/example/api/: __init__.py  apiurls.py  serializers.py  views.py
example_project/example/api_ninja/: __init__.py  api.py  schemas.py
example_project/example/migrations/: 0001_initial.py  0002_integerpintfieldsavewithindexmodel.py  0002_pintfieldwithcheckconstraint.py  0002_temperaturereadingmodel.py  __init__.py
example_project/laboratory/: __init__.py  admin.py  forms.py  models.py  urls.py
example_project/laboratory/management/commands/: __init__.py  cheatsheet.py  laboratory.py  populate.py
example_project/laboratory/migrations/: 0001_initial.py  0002_rename_testsubject_experimentsubject.py  __init__.py
example_project/laboratory/templates/laboratory/: base.html
example_project/laboratory/templates/laboratory/cheatsheet/: cheatsheet.html
example_project/laboratory/templates/laboratory/components/: components.css  danger_level_badge.html  dimensional_stability_gauge.html  measurement_display.html  status_indicator.html
example_project/laboratory/templates/laboratory/dashboard/: dimensional_stability.html  global_incident_map.html  main_dashboard.html  system_status.html
example_project/laboratory/templates/laboratory/laboratories/: laboratory_detail.html  laboratory_form.html  laboratory_list.html
example_project/laboratory/templates/laboratory/other/: device_detail.html  energy_detail.html  form.html  incident_detail.html  list.html  protocol_detail.html  rift_detail.html  subject_detail.html  substance_detail.html
example_project/laboratory/templates/laboratory/universes/: universe_detail.html  universe_form.html  universe_list.html
example_project/laboratory/templatetags/: __init__.py  lab_filters.py
example_project/laboratory/views/: __init__.py  cheatsheet.py  dashboard.py  laboratories.py  other.py  universes.py
requirements/: base.txt  extras.txt  test.txt
src/django_pint_field/: __init__.py  adapters.py  admin.py  aggregates.py  app_settings.py  apps.py  checks.py  exceptions.py  expressions.py  filters.py  forms.py  helper.py  helpers.py  indexes.py  lookups.py  models.py  rest.py  settings.py  units.py  validation.py  validators.py  widgets.py
src/django_pint_field/locale/de/LC_MESSAGES/: django.po
src/django_pint_field/locale/es/LC_MESSAGES/: django.po
src/django_pint_field/management/: __init__.py
src/django_pint_field/management/commands/: __init__.py  setup_pint_field.py
src/django_pint_field/migrations/: 0001_create_composite_fields.py  0002_consolidate_composite_fields.py  __init__.py
src/django_pint_field/templates/django_pint_field/: tabled_django_pint_field_widget.html
src/django_pint_field/templatetags/: __init__.py  django_pint_field.py
tests/: settings.py  test_admin.py  test_caching.py  test_field.py  test_helper.py  test_integration.py  test_rest.py  test_widget.py
tests/demoapp/: helper.py  urls.py
tests/demoapp/api/: apiurls.py  serializers.py  views.py
tests/demoapp/migrations/: 0001_initial.py  0002_defaultsinmodel.py  0003_bigintegerpintfieldcachedmodel_and_more.py  0004_djangopintfieldwidgetcomparisonmodel.py  0005_alter_djangopintfieldwidgetcomparisonmodel_tabled_weight_bigint_and_more.py
tests/dummyapp/: admin.py  forms.py  helper.py  models.py  urls.py
tests/dummyapp/api/: apiurls.py  serializers.py  views.py
tests/dummyapp/migrations/: 0001_initial.py  0002_defaultsinmodel.py  0002_xyzintfieldsavemodel.py  0003_alter_xyzintfieldsavemodel_weight.py  0003_bigintegerpintfieldcachedmodel_and_more.py  0004_djangopintfieldwidgetcomparisonmodel.py  0005_alter_djangopintfieldwidgetcomparisonmodel_tabled_weight_bigint_and_more.py
