[tool.poetry]
name = "django-pint-field"
version = "2024.5.1a1"
description = "Pint Fields for Django and Postgres"
authors = ["Jack Linke <jack@watervize.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "django_pint_field" }]

homepage = "https://github.com/OmenApps/django-pint-field"
repository = "https://github.com/OmenApps/django-pint-field"
keywords = ["django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
django = ">=4.2"
pint = ">=0.20"
psycopg2-binary = "^2.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24"
coverage = "^7.5"
django-cachalot = "^2.6"
django-extensions = "^3.2"
django-filter = "^24"
django-redis = "^5.4"
djangorestframework = "^3.15"
djlint = "^1.34"
markdown = "^3.6"
pydantic = "^2"
pytest = "^8"
pytest-cov = "^5.0"
pytest-django = "^4.8"
redis = { version = "^5", extras = ["hiredis"] }
ruff = "^0.4"
twine = "^5.0"
werkzeug = "^2.2"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
