[build-system]
requires = ["setuptools>=75.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pint-field"
version = "2024.11.3"
description = "Unit Conversion fields for Django and Postgres"
authors = [{ name = "Jack Linke", email = "jacklinke@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<4.0"
dependencies = ["django>=4.2.16", "pint>=0.23"]

[project.urls]
Homepage = "https://github.com/OmenApps/django-pint-field"
Repository = "https://github.com/OmenApps/django-pint-field"
Documentation = "https://django-pint-field.readthedocs.io/en/latest/"
Changelog = "https://github.com/OmenApps/django-pint-field/releases"

[tool.uv]
dev-dependencies = [
    "bandit>=1.7.8",
    "black>=24.4.2",
    "coverage[toml]>=7.5.1",
    "crispy-bootstrap5~=2024.10",
    "darglint>=1.8.1",
    "django-cachalot>=2.6",
    "django-crispy-forms~=2.3",
    "django-extensions>=3.2",
    "django-filter>=24",
    "django-redis>=5.4",
    "djangorestframework>=3.15",
    "djlint>=1.34",
    "flake8-bugbear>=24.4.26",
    "flake8-docstrings>=1.7.0",
    "flake8-rst-docstrings>=0.3.0",
    "flake8==7.0.0",
    "furo>=2024.8.6",
    "hiredis~=3.0",
    "isort>=5.13.2",
    "linkify-it-py==2.0.3",
    "markdown>=3.6",
    "myst-parser>=4.0.0",
    "nox>=2024.4.15",
    "pep8-naming>=0.14.1",
    "pre-commit-hooks>=4.6.0",
    "pre-commit>=3.7.1",
    "psycopg~=3.2",
    "pydantic>=2",
    "Pygments>=2.18.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest>=8.3.3",
    "python-environ~=0.4",
    "pyupgrade>=3.15.2",
    "redis>=5",
    "ruff>=0.4",
    "safety>=3.2.0",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-click>=6.0.0",
    "sphinx>=8.0.2",
    "twine>=5.0",
    "werkzeug>=2.2",
    "xdoctest[colors]>=1.1.3",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
templated_email_md = ["templates/templated_email/*", "locale/*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]
force-exclude = '''
(
  .nox
)
'''

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["example_project", "*/example_project"]

[tool.coverage.run]
branch = true
source = ["src", "example_project"]

[tool.coverage.report]
show_missing = true
fail_under = 50
omit = [".nox/*", "example_project/*", "**/migrations/*", "**/__init__.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
python_files = ["*test_*.py", "*_test.py", "example_project/*.py"]
log_cli = true
log_cli_level = "INFO"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2
extend_skip = [".nox"]

[tool.ruff]
line-length = 120
