[build-system]
requires = ["setuptools>=75.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pint-field"
version = "2026.1.2"
description = "Unit Conversion fields for Django and Postgres"
authors = [{ name = "Jack Linke", email = "jacklinke@gmail.com" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11,<4.0"
dependencies = ["django>=4.2.25", "pint>=0.24"]

[project.urls]
Homepage = "https://github.com/OmenApps/django-pint-field"
Repository = "https://github.com/OmenApps/django-pint-field"
Documentation = "https://django-pint-field.readthedocs.io/en/latest/"
Changelog = "https://github.com/OmenApps/django-pint-field/releases"

[dependency-groups]
dev = [
    "bandit==1.8.6",
    "blacken-docs==1.20.0",
    "coverage[toml]==7.11.0",
    "crispy-bootstrap5==2025.6",
    "darglint==1.8.1",
    "django-cachalot==2.8.0",
    "django-cacheops==7.2",
    "django-crispy-forms==2.4",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-ninja==1.4.4",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "djlint==1.36.4",
    "flake8-bugbear==24.12.12",
    "flake8-docstrings==1.7.0",
    "flake8-rst-docstrings==0.4.0",
    "flake8==7.3.0",
    "furo==2025.9.25",
    "hiredis==3.3.0",
    "linkify-it-py==2.0.3",
    "markdown==3.9",
    "myst-parser==4.0.1",
    "nox==2025.10.16",
    "pep8-naming==0.15.1",
    "pre-commit-hooks==6.0.0",
    "pre-commit==4.3.0",
    "psycopg==3.2.11",
    "pydantic==2.12.3",
    "Pygments==2.19.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest==8.4.2",
    "python-environ==0.4.54",
    "pyupgrade==3.21.0",
    "redis==6.4.0",
    "ruff==0.14.1",
    "safety==3.6.2",
    "sphinx-autobuild==2025.8.25",
    "sphinx-click==6.1.0",
    "sphinx==8.2.3",
    "tabulate==0.9.0",
    "twine==6.2.0",
    "werkzeug==3.1.3",
    "xdoctest[colors]==1.3.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["example_project", "*/example_project"]

[tool.coverage.run]
branch = true
source = ["src", "example_project"]

[tool.coverage.report]
show_missing = true
fail_under = 50
omit = [".nox/*", "example_project/*", "**/migrations/*", "**/__init__.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
python_files = ["*test_*.py", "*_test.py", "example_project/*.py"]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    # Ignore deprecation warnings from third-party packages we don't control.
    # django-ninja uses class-based Pydantic config which is deprecated in Pydantic v2.
    # Note: Some ninja warnings may still appear during Django settings import (before
    # pytest's warning filters are applied). These are harmless and will be fixed when
    # django-ninja updates to Pydantic v2 style.
    "ignore:Support for class-based:DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".nox", "migrations"]

[tool.ruff.format]
# Use double quotes for strings (like black)
quote-style = "double"
# Indent with spaces (like black)
indent-style = "space"
# Respect magic trailing commas (like black)
skip-magic-trailing-comma = false
# Format docstrings
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
]
# Only lint the main library code, not the example project
exclude = ["example_project"]

[tool.ruff.lint.isort]
# Match previous isort configuration
force-single-line = true
lines-after-imports = 2
